--- a/sports-iq/src/app/components/sidenav/sidenav.scss
+++ b/sports-iq/src/app/components/sidenav/sidenav.scss
@@ -19,6 +19,11 @@
       width: 165px;
     }
 
+      .logo-icon {
+    width: 65px;
+    height: 65px;
+  }
+
     .logo-text {
       font-size: 18px;
       color: var(--siq-brand-gold);
@@ -34,9 +39,10 @@
     }
   }
 
-  .logo-icon {
-    width: 65px;
-    height: 65px;
+  .user-profile {
+    display: flex;
+    align-items: center;
+    gap: 8px;
   }
 
   .text-enter {
