--- a/sports-iq/src/libs/components/dialog/dialog.html
+++ b/sports-iq/src/libs/components/dialog/dialog.html
@@ -1,1 +1,13 @@
-<p>dialog works!</p>
+<div [class]="'header ' + type()" >
+    @if (icon()) {
+  <mat-icon>{{ icon() }}</mat-icon>
+    }
+    <h2>{{ title() }}</h2>
+</div>
+<mat-dialog-content>
+    <ng-content [select]="siq-dialog-content"></ng-content>
+</mat-dialog-content>
+
+<mat-dialog-actions>
+    <ng-content [select]="siq-dialog-actions"></ng-content>
+</mat-dialog-actions>
