--- a/sports-iq/src/app/app.html
+++ b/sports-iq/src/app/app.html
@@ -1,3 +1,8 @@
 <siq-sidenav></siq-sidenav>
 
+<div class="main-content">
+    @if (showFilters()) {
+    <siq-filters></siq-filters>
+    }
 <router-outlet></router-outlet>
+</div>
