--- a/sports-iq/src/app/app.scss
+++ b/sports-iq/src/app/app.scss
@@ -1,4 +1,11 @@
 :host {
   display: flex;
   height: 100vh;
+
+  .main-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+  }
 }
