--- a/sports-iq/src/libs/components/nav-item/nav-item.html
+++ b/sports-iq/src/libs/components/nav-item/nav-item.html
@@ -5,7 +5,7 @@
   (click)="clicked.emit()"
 >
   @if (showIcon()) {
-    <mat-icon>{{ icon() }}</mat-icon>
+    <mat-icon [matTooltip]="title()">{{ icon() }}</mat-icon>
   }
   @if (showTitle()) {
     <span animate.enter="text-enter" animate-leave="text-leave" class="text-enter">
