--- a/sports-iq/src/app/components/header/header.html
+++ b/sports-iq/src/app/components/header/header.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <span class="page-title">{{ pageTitle() }}</span>
+  <span class="page-title">{{ pageTitle() }} - {{ sport()?.league }}</span>
 
   <siq-spacer></siq-spacer>
 </div>
